refactor: rename package from finance-news to vfinance-news
- Update package name, CLI command, and environment variables
- Rename finance_news directory to vfinance_news
- Update all imports, paths, and references in code, tests, docs, and workflows
- Modify pyproject.toml, pytest.ini, and uv.lock accordingly

BREAKING CHANGE: Package renamed to vfinance-news, CLI command changed from finance-news to vfinance-news, environment variables changed from FINANCE_NEWS_* to VFINANCE_NEWS_*

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "finance-news"
+name = "vfinance-news"
 version = "0.0.1"
 description = "Finance news aggregation and market briefing skill for OpenClaw"
 readme = "README.md"
@@ -13,7 +13,7 @@ dependencies = [
 ]
 
 [project.scripts]
-finance-news = "finance_news.cli:main"
+vfinance-news = "vfinance_news.cli:main"
 
 [project.optional-dependencies]
 dev = [
@@ -27,7 +27,7 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [tool.hatch.build.targets.wheel]
-packages = ["finance_news"]
+packages = ["vfinance_news"]
 
 [tool.pytest.ini_options]
 testpaths = ["tests"]
@@ -36,8 +36,8 @@ python_functions = ["test_*"]
 addopts = "-v --tb=short"
 
 [tool.coverage.run]
-source = ["finance_news"]
-omit = ["finance_news/__pycache__/*"]
+source = ["vfinance_news"]
+omit = ["vfinance_news/__pycache__/*"]
 
 [tool.coverage.report]
 exclude_lines = [
