--- a/pytest.ini
+++ b/pytest.ini
@@ -7,6 +7,6 @@ addopts =
     -v
     --strict-markers
     --tb=short
-    --cov=finance_news
+    --cov=vfinance_news
     --cov-report=term-missing
     --cov-report=html
