--- a/workflows/briefing.yaml
+++ b/workflows/briefing.yaml
@@ -1,27 +1,18 @@
 # Finance Briefing Workflow for Lobster
-# Usage: lobster "workflows.run --file workflows/briefing.yaml --args-json '{\"time\":\"morning\",\"lang\":\"de\"}'"
+# Usage: lobster "workflows.run --file workflows/briefing.yaml --args-json '{\"lang\":\"de\"}'"
 #
 # This workflow:
 # 1. Generates a market briefing via local .venv CLI
-# 2. Halts for approval before sending
-# 3. Sends to messaging channel after approval
+# 2. Halts for approval before completion
+# 3. Ends after approval review
 
 name: vfinance.briefing
-description: Generate market briefing and send to WhatsApp/Telegram with approval gate
+description: Generate market briefing with approval gate
 
 args:
-  time:
-    default: morning
-    description: "Briefing type: morning or evening"
   lang:
     default: de
     description: "Language: en or de"
-  channel:
-    default: "${VFINANCE_NEWS_CHANNEL:-whatsapp}"
-    description: "Delivery channel: whatsapp or telegram"
-  target:
-    default: "${VFINANCE_NEWS_TARGET}"
-    description: "Target: group name, JID, phone number, or Telegram chat ID (requires VFINANCE_NEWS_TARGET env var if not specified)"
   fast:
     default: "false"
     description: "Use fast mode: true or false"
@@ -40,7 +31,6 @@ steps:
         exit 1
       fi
       "$VFINANCE_NEWS_BIN" briefing \
-        --time "${time}" \
         --style briefing \
         --lang "${lang}" \
         --json \
@@ -62,7 +52,7 @@ steps:
     stdin: $generate.stdout
     description: Translate portfolio headlines via openclaw
 
-  # Validate deterministic structured macro output before approval/send
+  # Validate deterministic structured macro output before approval
   - id: validate
     command: |
       OUTFILE=$(cat)
@@ -71,7 +61,7 @@ steps:
       STRUCT_OK=$(jq -r '.summary_structure_ok // false' "$OUTFILE")
 
       if [ "$MODE" != "deterministic" ] || [ "$STRUCT_OK" != "true" ]; then
-        echo "❌ Refusing to send malformed macro briefing"
+        echo "❌ Refusing malformed macro briefing output"
         jq '{summary_mode, summary_model_used, summary_structure_ok, summary_missing_sections, generator}' "$OUTFILE"
         exit 1
       fi
@@ -86,44 +76,8 @@ steps:
     command: |
       OUTFILE=$(cat)
       echo "Briefing saved to: $OUTFILE"
-      echo "Target: ${target}"
-      echo "Channel: ${channel}"
       cat "$OUTFILE" | jq -r '.macro_message' | head -20
       echo "..."
-      echo "Review above. Approve to send."
+      echo "Review above."
     stdin: $validate.stdout
-    description: Approval gate before message delivery
-
-  # Send macro briefing (market overview)
-  - id: send_macro
-    command: |
-      OUTFILE=$(cat)
-      OUTFILE=$(echo "$OUTFILE" | tr -d '\n')
-      MSG=$(jq -r '.macro_message // empty' "$OUTFILE")
-      if [ -n "$MSG" ]; then
-        openclaw message send \
-          --channel "${channel}" \
-          --target "${target}" \
-          --message "$MSG"
-      else
-        echo "No macro message to send"
-      fi
-    stdin: $validate.stdout
-    description: Send macro briefing
-
-  # Send portfolio briefing (stock movers)
-  - id: send_portfolio
-    command: |
-      OUTFILE=$(cat)
-      OUTFILE=$(echo "$OUTFILE" | tr -d '\n')
-      MSG=$(jq -r '.portfolio_message // empty' "$OUTFILE")
-      if [ -n "$MSG" ]; then
-        openclaw message send \
-          --channel "${channel}" \
-          --target "${target}" \
-          --message "$MSG"
-      else
-        echo "No portfolio message to send"
-      fi
-    stdin: $validate.stdout
-    description: Send portfolio briefing
+    description: Approval gate before completion
