--- a/workflows/earnings-cron.yaml
+++ b/workflows/earnings-cron.yaml
@@ -2,21 +2,15 @@
 # Usage: lobster run --file workflows/earnings-cron.yaml --args-json '{"lang":"en"}'
 #
 # Schedule: 6:00 AM PT / 9:00 AM ET (30 min before market open)
-# Sends today's earnings calendar to WhatsApp/Telegram
+# Prints today's earnings calendar summary
 
 name: vfinance.earnings.cron
-description: Send earnings alerts for today's reports
+description: Check earnings alerts for today's reports
 
 args:
   lang:
     default: en
     description: "Language: en or de"
-  channel:
-    default: "${VFINANCE_NEWS_CHANNEL:-whatsapp}"
-    description: "Delivery channel: whatsapp or telegram"
-  target:
-    default: "${VFINANCE_NEWS_TARGET}"
-    description: "Target: group name, JID, or chat ID"
 
 steps:
   # Check earnings calendar for today and this week
@@ -26,20 +20,16 @@ steps:
       "$SKILL_DIR/.venv/bin/python" -m vfinance_news.earnings check --lang "${lang}"
     description: Get today's earnings calendar
 
-  # Send earnings alert if there's content
-  - id: send_earnings
+  # Print earnings alert if there's content
+  - id: summarize_earnings
     command: |
       MSG=$(cat)
       MSG=$(echo "$MSG" | tr -d '\r')
-      # Only send if there are actual earnings today
+      # Only print if there are actual earnings today
       if echo "$MSG" | grep -q "EARNINGS TODAY\|EARNINGS HEUTE"; then
-        openclaw message send \
-          --channel "${channel}" \
-          --target "${target}" \
-          --message "$MSG"
-        echo "Sent earnings alert to ${channel}"
+        echo "$MSG"
       else
-        echo "No earnings today - skipping message"
+        echo "No earnings today"
       fi
     stdin: $check_earnings.stdout
-    description: Send earnings alert to channel
+    description: Print earnings alert
