--- a/workflows/briefing-cron.yaml
+++ b/workflows/briefing-cron.yaml
@@ -1,18 +1,14 @@
 # Finance Briefing Workflow for Cron (No Approval Gate)
-# Usage: lobster run --file workflows/briefing-cron.yaml --args-json '{"lang":"de"}'
+# Usage: lobster run --file workflows/briefing-cron.yaml --args-json '{"fast":"false"}'
 #
 # This workflow:
 # 1. Generates a market briefing via local .venv CLI
-# 2. Translates portfolio headlines (German)
-# 3. Validates output and exits (no delivery)
+# 2. Validates output and exits (no delivery)
 
 name: vfinance.briefing.cron
 description: Generate market briefing for cron (no delivery)
 
 args:
-  lang:
-    default: de
-    description: "Language: en or de"
   fast:
     default: "false"
     description: "Use fast mode: true or false"
@@ -32,25 +28,11 @@ steps:
       fi
       "$VFINANCE_NEWS_BIN" briefing \
         --style briefing \
-        --lang "${lang}" \
         --json \
         $FAST_FLAG > "$OUTFILE"
       # Output the file path for subsequent steps
       echo "$OUTFILE"
     description: Generate briefing via local .venv CLI
-
-  # Translate portfolio headlines (if German)
-  - id: translate
-    command: |
-      OUTFILE=$(cat)
-      OUTFILE=$(echo "$OUTFILE" | tr -d '\n')
-      SKILL_DIR="${SKILL_DIR:-$HOME/projects/skills/personal/vfinance-news}"
-      if [ "${lang}" = "de" ]; then
-        "$SKILL_DIR/.venv/bin/python" -m vfinance_news.translate_portfolio "$OUTFILE" --lang de || true
-      fi
-      echo "$OUTFILE"
-    stdin: $generate.stdout
-    description: Translate portfolio headlines via openclaw
 
   # Validate deterministic structured macro output
   - id: validate
@@ -67,7 +49,7 @@ steps:
       fi
 
       echo "$OUTFILE"
-    stdin: $translate.stdout
+    stdin: $generate.stdout
     description: Validate deterministic structured output
 
   # Output validated briefing path for downstream cron handling
