--- a/workflows/alerts-cron.yaml
+++ b/workflows/alerts-cron.yaml
@@ -1,5 +1,5 @@
 # Price Alerts Workflow for Cron (No Approval Gate)
-# Usage: lobster run --file workflows/alerts-cron.yaml --args-json '{"lang":"en"}'
+# Usage: lobster run --file workflows/alerts-cron.yaml
 #
 # Schedule: 2:00 PM PT / 5:00 PM ET (1 hour after market close)
 # Checks price alerts against current prices (including after-hours)
@@ -7,17 +7,12 @@
 name: vfinance.alerts.cron
 description: Check price alerts and print triggered alerts
 
-args:
-  lang:
-    default: en
-    description: "Language: en or de"
-
 steps:
   # Check alerts against current prices
   - id: check_alerts
     command: |
       SKILL_DIR="${SKILL_DIR:-$HOME/projects/skills/personal/vfinance-news}"
-      "$SKILL_DIR/.venv/bin/python" -m vfinance_news.alerts check --lang "${lang}"
+      "$SKILL_DIR/.venv/bin/python" -m vfinance_news.alerts check
     description: Check price alerts against current prices
 
   # Print alert message summary if there's content
@@ -26,7 +21,7 @@ steps:
       MSG=$(cat)
       MSG=$(echo "$MSG" | tr -d '\r')
       # Only print if message has actual content (not just "No price data" message)
-      if echo "$MSG" | grep -q "IN BUY ZONE\|IN KAUFZONE\|WATCHING\|BEOBACHTUNG"; then
+      if echo "$MSG" | grep -q "IN BUY ZONE\|WATCHING"; then
         echo "$MSG"
       else
         echo "No triggered alerts or watchlist items"
